; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/storage/lmgr/extr_lock.c_LockReassignCurrentOwner.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/storage/lmgr/extr_lock.c_LockReassignCurrentOwner.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CurrentResourceOwner = common dso_local global i32 0, align 4
@LockMethodLocalHash = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @LockReassignCurrentOwner(i32** %0, i32 %1) #0 {
  %3 = alloca i32**, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  store i32** %0, i32*** %3, align 8
  store i32 %1, i32* %4, align 4
  %9 = load i32, i32* @CurrentResourceOwner, align 4
  %10 = call i32* @ResourceOwnerGetParent(i32 %9)
  store i32* %10, i32** %5, align 8
  %11 = load i32*, i32** %5, align 8
  %12 = icmp ne i32* %11, null
  %13 = zext i1 %12 to i32
  %14 = call i32 @Assert(i32 %13)
  %15 = load i32**, i32*** %3, align 8
  %16 = icmp eq i32** %15, null
  br i1 %16, label %17, label %29

17:                                               ; preds = %2
  %18 = load i32, i32* @LockMethodLocalHash, align 4
  %19 = call i32 @hash_seq_init(i32* %6, i32 %18)
  br label %20

20:                                               ; preds = %24, %17
  %21 = call i64 @hash_seq_search(i32* %6)
  %22 = inttoptr i64 %21 to i32*
  store i32* %22, i32** %7, align 8
  %23 = icmp ne i32* %22, null
  br i1 %23, label %24, label %28

24:                                               ; preds = %20
  %25 = load i32*, i32** %7, align 8
  %26 = load i32*, i32** %5, align 8
  %27 = call i32 @LockReassignOwner(i32* %25, i32* %26)
  br label %20

28:                                               ; preds = %20
  br label %47

29:                                               ; preds = %2
  %30 = load i32, i32* %4, align 4
  %31 = sub nsw i32 %30, 1
  store i32 %31, i32* %8, align 4
  br label %32

32:                                               ; preds = %43, %29
  %33 = load i32, i32* %8, align 4
  %34 = icmp sge i32 %33, 0
  br i1 %34, label %35, label %46

35:                                               ; preds = %32
  %36 = load i32**, i32*** %3, align 8
  %37 = load i32, i32* %8, align 4
  %38 = sext i32 %37 to i64
  %39 = getelementptr inbounds i32*, i32** %36, i64 %38
  %40 = load i32*, i32** %39, align 8
  %41 = load i32*, i32** %5, align 8
  %42 = call i32 @LockReassignOwner(i32* %40, i32* %41)
  br label %43

43:                                               ; preds = %35
  %44 = load i32, i32* %8, align 4
  %45 = add nsw i32 %44, -1
  store i32 %45, i32* %8, align 4
  br label %32

46:                                               ; preds = %32
  br label %47

47:                                               ; preds = %46, %28
  ret void
}

declare dso_local i32* @ResourceOwnerGetParent(i32) #1

declare dso_local i32 @Assert(i32) #1

declare dso_local i32 @hash_seq_init(i32*, i32) #1

declare dso_local i64 @hash_seq_search(i32*) #1

declare dso_local i32 @LockReassignOwner(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
